Add Xinecraft button  :star:

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+
+.font-bhs {
+    font-family: 'Black Han Sans', sans-serif;
+}
